--- a/index.html
+++ b/index.html
@@ -17,11 +17,36 @@ title: Santiago Alvarez
         {% endunless %}
         <li>
             <div class="wrap group">
-                <div class="link"><a href="{{ post.url }}">{{ post.title }}</a></div>
+				{% if post.thumbnail %}
+				<a href="{{ post.url }}">
+				<img src="{{ post.thumbnail }}" style="float:left;border:0; width:160px;height:88px" /></a>
+				<!--<p>
+				<a class="btn" href="{{ BASE_PATH }}{{ post.url }}">Read more...</a>
+				</p>-->
+				<!--<div class="link"><a href="{{ post.url }}">
+				 <img  src="{{ post.img.small }}" alt="{{ post.title }}" style="float:left;border:0">
+				</a></div>-->
+				<!--<div class="link"><a href="{{ post.url }}">
+				<picture>
+			   <source media="(min-width: 640px)"  sizes="0.5vw" src="{{post.img.large}}}}">
+			   <source media="(min-width: 375px)" sizes="0.5vw" src="{{post.img.medium}}">
+			   <source sizes="0.5vw" src="{{post.img.small}}">
+			   <img sizes="0.5vw" src="{{post.img.small}}" alt="This picture loads on non-supporting browsers." style="float:left;border:0">
+			</picture>
+			</a></div>
+				<div class="info">-->
+				&nbsp;
+				{% endif %}
+               
+			   <a href="{{ post.url }}"> {{ post.title }}</a>
                 <div class="info">
+										 
                     /{{ post.category }}/ -
                     {{ post.date | date: "%b %d" }}
                 </div>
+				<!--<p>{% for tags in post.tags %}
+						/{{ tags  | strip_html | truncatewords:2 }}/ -
+					{% endfor %}</p>-->
             </div>
         </li>
     {% endfor %}
