Resume - Mission Complete!

--- a/about/index.html
+++ b/about/index.html
@@ -64,4 +64,6 @@ title: Santiago Alvarez
 	I like to read, but I also like to experience, live and know new places, cultures, people and everything that can teach more about the world and the people living in it, after all we are making games for them, isn't it?
     </p>
     <br>
+	
+	Last Update: 09-Jul-2015
 </div>
