Fix to About and Resume

--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@ title: Santiago Alvarez
 		I ended up deciding that Video Games were my thing.
     </p>
     <p>
-		I started attending at University to study Systems Engineering because I thought it was a good way to learn
+		I started attending at the University to study Systems Engineering because I thought it was a good way to learn
 		to program and create games, but none of the courses were about making games (as expected),
 		so I ended up, not getting home to rest after class, but instead,
 		to learn how to create games, this became one of my major skills: I'm Autodidact.
