--- a/resume/index.html
+++ b/resume/index.html
@@ -21,7 +21,7 @@ title: Santiago Alvarez
     <ul id="toc"></ul>
     <div id="skills" style="font-size:11pt">
         <hr />
-        <h2>Languages</h2>
+        <h2>Programming Languages</h2>
         <hr />
             <p>
                 C#, C++, Java, JavaScript, HTML, CSS, SQL/PLSQL, Pure Data
@@ -50,7 +50,16 @@ title: Santiago Alvarez
         <hr />
         <h2>Other</h2>
         <hr />
-        <p>Agile, Scrum, Animation, 3D Modelling, Networking, Data Bases, WEP,WPA/WPA2 Cracking, </p>
+        <p>Agile, Scrum, Animation, 3D Modelling, Networking, Data Bases, WEP,WPA/WPA2 Cracking </p>
+		
+		<hr />
+        <h2>Languages</h2>
+        <hr />
+		<p>
+		<li>Spanish (Native)</li>
+		<li>English</li>
+		</p>
+		
     </div>
     <div id="xp">
 	
