--- a/resume/index.html
+++ b/resume/index.html
@@ -19,6 +19,7 @@ title: Santiago Alvarez
         <a href="http://www.linkedin.com/in/saalvarezva" title="Connect with me">LinkedIn</a>
     </p>
     <ul id="toc"></ul>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/7b0HIN8DEsI" frameborder="0" allowfullscreen></iframe>
     <div id="skills" style="font-size:11pt">
         <hr />
         <h2>Programming Languages</h2>
