--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: Santiago Alvarez
 <div id="archive">
     <ul>
     {% for post in site.posts %}
+
         {% unless post.next %}
             <h2>{{ post.date | date: '%Y' }}</h2>
         {% else %}
@@ -19,11 +20,10 @@ title: Santiago Alvarez
             <div class="wrap group">
 				{% if post.thumbnail %}			
 				
-				<a href="{{ post.url }}"><img src="{{ post.thumbnail }}" style="float:left;border:0; width:160px;height:88px" usemap="#clickableArea"/></a>
-				<map name="clickableArea">
-				  <area shape="rect" coords="0,0,160,88" href="{{ post.url }}">
+				<img src="{{ post.thumbnail }}" style="float:left;border:0" width=160px height=88px usemap="{{post.url}}"/>
+				<map name="{{post.url}}">
+					<area shape="rect" coords="0px,0px,160px,88px" href={{ post.url }} >
 				</map>
-				
 				<!--<p>
 				<a class="btn" href="{{ BASE_PATH }}{{ post.url }}">Read more...</a>
 				</p>-->
