New Beat Boy Project

--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ title: Santiago Alvarez
     <h2>Hi. I'm Santiago.</h2>
     <p>
 		I'm finishing my studies on Systems Engineering at Universidad Nacional
-		of Colombia and at the same time I'm working <!--as an Intern--> in Cocodrilo Dog Games
+		of Colombia; my last work was as a game developer <!--as an Intern--> at Cocodrilo Dog Games
 		<!--until the end of July-->; with a team consisting of one producer, two programmers and three
 		artists.
     </p>
@@ -65,5 +65,9 @@ title: Santiago Alvarez
     </p>
     <br>
 	
-	Last Update: 09-Jul-2015
+	 
+	<br>
+	Last Update: 10-Oct-2015
+	<br>
+	- Please let me know if you find any typo -
 </div>
