--- a/resume/index.html
+++ b/resume/index.html
@@ -9,14 +9,14 @@ title: Santiago Alvarez
         <a href="/documents/Santiago_Alvarez_Resume_en.pdf" title="Download PDF">Resume - PDF </a>
         <span>/</span>
         <a href="/documents/Santiago_Alvarez_Resume_en.docx" title="Download DOCX">Resume - DOCX </a>
+        <span>/</span><br>
+		<b>Español</b><br>
+        <a href="/documents/Santiago_Alvarez_Resume_es.pdf" title="Descargar PDF">Resumen - PDF </a>
         <span>/</span>
+        <a href="/documents/Santiago_Alvarez_Resume_es.docx" title="Descargar DOCX">Resumen - DOCX </a>
+        <span>/</span><br>
 		<a href="http://www.linkedin.com/in/saalvarezva" title="Connect with me">LinkedIn</a>
-		<!--<br><b>Español</b><br>
-		 <a href="/documents/Santiago_Alvarez_Resume_es.pdf" title="Download PDF">Resumen - PDF </a>
-        <span>/</span>
-        <a href="/documents/Santiago_Alvarez_Resume_es.docx" title="Download DOCX">Resumen - DOCX </a>
-        <span>/</span>
-        <a href="http://www.linkedin.com/in/saalvarezva" title="Connect with me">LinkedIn</a>-->
+
     </p>
     <ul id="toc"></ul>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/7b0HIN8DEsI" frameborder="0" allowfullscreen></iframe>
@@ -25,7 +25,7 @@ title: Santiago Alvarez
         <h2>Programming Languages</h2>
         <hr />
             <p>
-                C#, C++, Java, JavaScript, HTML, CSS, SQL/PLSQL, Pure Data
+                C#, C++, Java, JavaScript, HTML, CSS, PHP, SQL/PLSQL, Pure Data
             </p>
         <hr />
         <h2>Libraries</h2>
@@ -38,7 +38,7 @@ title: Santiago Alvarez
         <hr />
             <b>Edit, Compile, Debug</b>
             <p>
-              MonoDevelop, Eclipse, Xcode
+              MonoDevelop, Visual Studio Eclipse, Xcode
             </p>
             <b>Version Control</b>
             <p>Git</p>
@@ -70,10 +70,11 @@ title: Santiago Alvarez
 		
         <h3>Cocodrilo Dog Games</h3>
         <i>Game Developer</i>
-        <p>February 2015 - Current</p>
+        <p>February 2015 - August 2015</p>
 		 <ul>
- 			<li>Worked alongside artists, and programmer to develop two unannounced  Xbox One / PS4 / PC games.</li>
-			<li>Worked alongside artists, and programmer to develop an unannounced  iOS game.</li>
+ 			<li>Worked alongside artists, and a programmer to develop <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=518744809">Beat Boy (Steam Greenlight Link)</a>  Xbox One / PS4 / PC game.</li>
+			<li>Worked alongside artists, and a programmer to develop an unannounced  Xbox One / PS4 / PC game.</li>
+			<li>Worked alongside artists, and a programmer to develop an unannounced  iOS game.</li>
             <li>In charge of version control system for the team.</li>
 			<li>Gameplay programming, assets integration into Unity and Pure Data library integration.</li>
 			<li>Unity Editor tools creation for level editing and data management.</li>
@@ -121,7 +122,7 @@ title: Santiago Alvarez
             <li><b>Certificate in Organic Modeling Of Characters In Autodesk MAYA</b> - SENA – 2014</li>
         </ul>
 		
-		<br>Last Update: 09-Jul-2015<br>
+		<br>Last Update: 10-Oct-2015<br>
 
     </div>
 </div>
