Beat Boy Links Added

--- a/resume/index.html
+++ b/resume/index.html
@@ -72,7 +72,7 @@ title: Santiago Alvarez
         <i>Game Developer</i>
         <p>February 2015 - August 2015</p>
 		 <ul>
- 			<li>Worked alongside artists, and a programmer to develop <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=518744809">Beat Boy (Steam Greenlight Link)</a>  Xbox One / PS4 / PC game.</li>
+ 			<li>Worked alongside artists, and a programmer to develop <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=518744809" target="_blank">Beat Boy (Steam Greenlight Link)</a> Xbox One / PS4 / PC game.</li>
 			<li>Worked alongside artists, and a programmer to develop an unannounced  Xbox One / PS4 / PC game.</li>
 			<li>Worked alongside artists, and a programmer to develop an unannounced  iOS game.</li>
             <li>In charge of version control system for the team.</li>
