Added google analytics and updated actual work

--- a/about/index.html
+++ b/about/index.html
@@ -7,10 +7,11 @@ title: Santiago Alvarez
 	
     <h2>Hi. I'm Santiago.</h2>
     <p>
-		I'm finishing my studies on Systems Engineering at Universidad Nacional
-		of Colombia; my last work was as a game developer <!--as an Intern--> at Cocodrilo Dog Games
-		<!--until the end of July-->; with a team consisting of one producer, two programmers and three
-		artists.
+        I'm currently working as a game developer at <a href="http://www.rainbowtreeinc.com/">Rainbow Tree Inc</a>, also
+        I'm finishing my studies on Systems Engineering at Universidad Nacional
+        of Colombia; my previous work was as a game developer <!--as an Intern--> at Cocodrilo Dog Games
+        <!--until the end of July-->; with a team consisting of one producer, two programmers and three
+        artists.
     </p>
     <p>
 		I dedicated (and I'm still doing it) a lot of time to play games since I was a small kid, 
