--- a/resume/index.html
+++ b/resume/index.html
@@ -76,6 +76,7 @@ title: Santiago Alvarez
             <li> Develop different in-house tools to reduce workflow time, especially used by the technical artist.</li>
             <li> Contributed to allow a Multi-Resolution compatibility between different devices and browsers.</li>
             <li> Contributed to optimized the images to consume 50% to 70% less memory usage.</li>
+            <li> Evaluate new technologies and summarized the ones that works better for the games and apps to be developed.</li>
         </ul>
 
 
