Removed Extra Info

--- a/beatboy.html
+++ b/beatboy.html
@@ -107,8 +107,7 @@
                 <p>
                     I worked on this game as part of the team at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a>
                     for around 4 months, also in the audio engine plugins for Unity that allowed the music synchronization with the gameplay.
-                    it was published on <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=518744809" target="_blank">Steam Greenlight</a> and presented to multiple posible publishers which where interested
-                    on it ( psst: including Bandai Namco ;) )
+                    it was published on <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=518744809" target="_blank">Steam Greenlight</a>
                 </p>
             </div>
             <div class="col-lg-10 col-lg-offset-1 centered ">
@@ -125,7 +124,6 @@
 
                 <ul>
                     <li>C#</li>
-                    <li>Pure Data (Audio Engine)</li>
                     <li>Objective-C (Plugin Implementation for Mobile Version)</li>
                 </ul>
 
@@ -143,7 +141,6 @@
                     <li>Unity Editor Tools</li>
                     <li>Unity Plugins Creation</li>
                     <li>Rewind and Fast Forward Gameplay (Time Alteration)</li>
-                    <li>Pure Data and Rhythm Platformer Actions </li>
                     <li>Xbox One Configuration for Demo Testing</li>
                     <li>Team Work with really talented people!</li>
                 </ul>
