Fix: 3D Models Area

--- a/personalwork.html
+++ b/personalwork.html
@@ -137,7 +137,7 @@
                 <div class="col-sm-pull-0">
                     <a href="#" id="image-gallery-button" type="button">
                         <img class="img-responsive img-thumbnail" src="assets/img/PersonalProjects/3DStudios(2014)/thumbnail400x300.jpg" alt="" />
-                        <br> 3D STUDY MODELS (COMPLETED - 2014) <br> AREA: Algorithms <br>TECH: MAYA
+                        <br> 3D STUDY MODELS (COMPLETED - 2014) <br> AREA: 3D <br>TECH: MAYA
                     </a>
                 </div>
                 <br>
