--- a/webgames.html
+++ b/webgames.html
@@ -107,57 +107,108 @@
                 <div id="listGames" class="collapse">
                     <br />
                     <ul>
+                        <h3>MATH</h3>
                         <li>Lulu Shapes</li>
-                        <li>Contando con Colores Raton Ramon - Español</li>
-                        <li>Contando con Raton Ramon - Español</li>
-                        <li>Counting with Raton Ramon - English</li>
-                        <li>Counting with Colors Raton Ramon - English</li>
-                        <li>Meet my family Christian</li>
-                        <li>Meet my family Teresa</li>
+                        <li><a href="http://www.arbolabc.com/contemos-con-raton-ramon/" target="_blank"> Contando con Ratón Ramón</a></li>
                         <li>Un dia en la finca Lv2</li>
                         <li>Un dia en la finca Lv3</li>
-                        <li>Birds of Colors</li>
-                        <li>Hello / Good Bye</li>
-                        <li>Good Morning / Good Night</li>                    
-                        <li>Let's color the ball  </li>
-                        <li>Ten monkeys</li>
-                        <li>Ten Fish</li>
-                        <li>Alphabet Animals</li>
-                        <li>Alphabet Fruits</li> 
-                        <li>El parque</li> 
-                        <li>Es mi hogar</li> 
-                        <li>Las calles</li> 
-                        <li>Un / Unos</li> 
-                        <li>Un / Unas</li> 
-                        <li>Un salon</li> 
-                        <li>Las Plantas</li>  
-                        <li>El sistema solar</li>  
-                        <li>Sumemos con Ratita Rita Lvl 2</li>                              
-                        <li>Sumemos con Ratita Rita Lvl 3</li>              
-                        <li>De Compras con el Ogro</li> 
-                        <li>De Compras con el Ogro - Exploratorio - 1 - 25</li>
-                        <li>De Compras con el Ogro - Exploratorio - 1 - 10</li>
                         <li>De Compras con el Ogro - 1 - 10</li>
                         <li>De Compras con el Ogro - 1 - 20</li>
+                        <li>De Compras con el Ogro - Number Bounds - 1 - 10</li>
+                        <li>De Compras con el Ogro - Number Bounds - Exploratorio</li>
+                        <li>De Compras con el Ogro - Number Bounds- 1 - 20</li>
+                        <li>Sumemos con Ratita Rita Lvl 2</li>
+                        <li>Sumemos con Ratita Rita Lvl 3</li>
+                        <li>Puzzle Lv1 Numbers 1-10_EN</li>
+                        <li>Puzzle Lv2 Numbers 10-20_EN</li>
+                        <li>Puzzle Lv2 Numbers 10-100_EN</li>
+                        <li>Puzzle Lv2 Numbers 100-1000_EN</li>
+                        <li>Puzzle Lv1 Numbers 1-10</li>
+                        <li>Puzzle Lv2 Numbers 10-20</li>
+                        <li>Puzzle Lv2 Numbers 10-100</li>
+                        <li>Puzzle Lv2 Numbers 100-1000</li>
                         <li>Connect The Dots - 1 to 5 - ES</li>
-                        <li> Connect The Dots - 1 to 5 - EN</li>
-                        <li> Connect The Dots - 1 to 10 - ES</li>
-                        <li>Connect The Dots - 1 to 10 - EN</li>
-                        <li>Connect The Dots - Vowels - EN</li>
-                        <li>Connect The Dots - Vowels - ES</li>
-                        <li>Connect The Dots - Alphabet - EN</li>
-                        <li>Connect The Dots - Alphabet - ES</li>
+                        <li>Connect The Dots - 1 to 10 - ES</li>
                         <li>Connect The Dots - 1 - 20</li>
+                        <li>Connect The Dots - 2x2 - 40</li>
+                        <li>Connect The Dots - 3x3 - 60</li>
+                        <li>Connect The Dots - 5x5 - 50</li>
+                        <li>Connect The Dots - 5x5 - 100</li>
+                        <li>Connect The Dots - 10x10 - 100</li>
+                        <li>Connect The Dots - 10x10 - 200</li>
                         <li>Connect The Dots - 21 - 40</li>
                         <li>Connect The Dots - 41 - 60</li>
                         <li>Connect The Dots - 61 - 80</li>
                         <li>Connect The Dots - 81 - 100</li>
-                        <li>Connect The Dots - 2 x 2 - 40</li>
-                        <li>Connect The Dots - 3 x 3 - 60</li>
-                        <li>Connect The Dots - 5 x 5 - 50</li>
-                        <li> Connect The Dots - 5 x 5 - 100</li>
-                        <li> Connect The Dots - 10 x 10 - 100</li>
-                        <li>Connect The Dots - 10 x 10 - 200</li>                        
+                        <li>Bubbles Numbers Recon</li>
+                        <li>Bubbles Shapes</li>
+                        <li>Bubbles Subtract 1-10-20</li>
+                        <li>Bubbles Subtract 20-50-100</li>
+                        <li>Bubbles Sumas 1-10-20</li>
+                        <li>Bubbles Sumas 20-50-100</li>
+
+                        <h3>SPANISH</h3>
+                        <li>Connect The Dots - Vowels - ES</li>
+                        <li><a href="http://www.arbolabc.com/conecta-los-puntos-alfabeto/" target="_blank"> Connect The Dots - Alphabet - ES</a></li>
+                        <li>Bubbles Alphabet ES</li>
+                        <li>Bubbles Vowels ES</li>
+                        <li>Puzzle Alphabet ABCD</li>
+                        <li>Puzzle Alphabet EFGH</li>
+                        <li>Puzzle Alphabet IJKL</li>
+                        <li>Puzzle Alphabet MNÑO</li>
+                        <li>Puzzle Alphabet PQRS</li>
+                        <li>Puzzle Alphabet TUVW</li>
+                        <li>Puzzle Alphabet XYZ</li>
+
+                        <h3>ENGLISH</h3>
+                        <li>Counting with Raton Ramon</li>
+                        <li>Meet my family Christian - Exploratory</li>
+                        <li>Meet my family Teresa - Exploratory</li>
+                        <li>Puzzle_Alphabet ABCD EN</li>
+                        <li>Puzzle_Alphabet EFGH EN</li>
+                        <li>Puzzle_Alphabet IJKL EN</li>
+                        <li>Puzzle_Alphabet MNO EN</li>
+                        <li>Puzzle_Alphabet PQRS EN</li>
+                        <li>Puzzle_Alphabet TUVW EN</li>
+                        <li>Puzzle_Alphabet XYZ EN</li>
+                        <li>Bubbles Colors EN</li>
+                        <li>Connect The Dots - 1 to 5 - EN</li>
+                        <li>Connect The Dots - 1 to 10 - EN</li>
+                        <li>Connect The Dots - Vowels - EN</li>
+                        <li>Connect The Dots - Alphabet - EN</li>
+                        <li>Bubbles Alphabet EN</li>
+                        <li>Bubbles Vowels EN</li>
+                        <li><a href="http://www.arbolabc.com/el-alfabeto-de-los-animales/" target="_blank"> ABC Alphabet Animals</a></li>
+                        <li>ABC Alphabet Fruits</li>
+                        <li>Birds Of Colors</li>
+                        <li>Good Morning Good Night</li>
+                        <li>Hello GoodBye</li>
+                        <li>Let's Color The Ball</li>
+                        <li>Ten Fish</li>
+                        <li>Ten Monkeys</li>
+
+                        <h3>HOBBY</h3>
+                        <li>Counting with Colors Raton Ramon</li>
+                        <li>Contando con Colores Raton Ramon</li>
+                        <li>Puzzle Lv1 Characters</li>
+                        <li>Puzzle Lv2 Characters</li>
+                        <li>Puzzle Photos Animals</li>
+                        <li>Puzzle Photos Transport</li>
+                        <li>Bubbles Colors ES</li>
+
+                        <h3>BOOKS</h3>
+                        <li>Juan y la Puerca Emperifollada (Fairy Tales)</li>
+                        <li>Animales Bebés (Non-Fiction)</li>
+                        <li>Las Plantas (Non-Fiction)</li>
+                        <li>SistemaSolar (Non-Fiction)</li>
+                        <li>SoyUnInsecto (Non-Fiction)</li>
+                        <li>Transporte (Non-Fiction)</li>
+                        <li>El Parque</li>
+                        <li>Es Mi Hogar</li>
+                        <li>Las Calles</li>
+                        <li>Una Unas</li>
+                        <li>Un Unos</li>
+                        <li>Un Salon</li>
                     </ul>
                 </div>
            </div>      
@@ -239,7 +290,7 @@
                 <div class="col-lg-4">
                     <h4>About this web page</h4>
                     <p>I'm using bootstrap and the theme STANLEY with some of my own touch</p>
-                    Last Update: 12-April-2016
+                    Last Update: 14-July-2016
                 </div><!-- /col-lg-4 -->
 
             </div>
