--- a/webgames.html
+++ b/webgames.html
@@ -109,7 +109,7 @@
                     <ul>
                         <h3>MATH</h3>
                         <li>Lulu Shapes</li>
-                        <li><a href="http://www.arbolabc.com/contemos-con-raton-ramon/" target="_blank"> Contando con Ratón Ramón</a></li>
+                        <li>Contando con Ratón Ramón</li>
                         <li>Un dia en la finca Lv2</li>
                         <li>Un dia en la finca Lv3</li>
                         <li>De Compras con el Ogro - 1 - 10</li>
@@ -149,7 +149,7 @@
 
                         <h3>SPANISH</h3>
                         <li>Connect The Dots - Vowels - ES</li>
-                        <li><a href="http://www.arbolabc.com/conecta-los-puntos-alfabeto/" target="_blank"> Connect The Dots - Alphabet - ES</a></li>
+                        <li>Connect The Dots - Alphabet - ES</li>
                         <li>Bubbles Alphabet ES</li>
                         <li>Bubbles Vowels ES</li>
                         <li>Puzzle Alphabet ABCD</li>
@@ -178,7 +178,7 @@
                         <li>Connect The Dots - Alphabet - EN</li>
                         <li>Bubbles Alphabet EN</li>
                         <li>Bubbles Vowels EN</li>
-                        <li><a href="http://www.arbolabc.com/el-alfabeto-de-los-animales/" target="_blank"> ABC Alphabet Animals</a></li>
+                        <li>ABC Alphabet Animals</li>
                         <li>ABC Alphabet Fruits</li>
                         <li>Birds Of Colors</li>
                         <li>Good Morning Good Night</li>
@@ -198,7 +198,8 @@
 
                         <h3>BOOKS</h3>
                         <li>Juan y la Puerca Emperifollada (Fairy Tales)</li>
-                        <li>Animales Bebés (Non-Fiction)</li>
+                        <li><a href="https://www.arbolabc.com/juegos-gratis/animal-bebes-b" target="_blank"> Animales Bebés (Non-Fiction)</a></li>
+                        <li></li>
                         <li>Las Plantas (Non-Fiction)</li>
                         <li>SistemaSolar (Non-Fiction)</li>
                         <li>SoyUnInsecto (Non-Fiction)</li>
@@ -221,6 +222,7 @@
 
                     <ul>
                         <li>Phaser</li>
+                        <li>Game Maker Studio</li>
                     </ul>
 
                     <h4>  Programming Language(s)  </h4>
@@ -241,10 +243,9 @@
                     <h4>  Cool Stuff - Challenges - Things I learned to do</h4>
 
                     <ul>
-                        <li> Develop HTML5 & Javascript games, using the Phaser library.</li>
+                        <li>Develop games for HTML5, Android and iOS platforms, using the Phaser library and Game Maker Studio.</li>
                         <li> Develop different in-house tools to reduce workflow time, especially used by the technical artist.</li>
                         <li> Contributed to allow a Multi-Resolution compatibility between different devices and browsers.</li>
-                        <li> Contributed to optimized the images to consume 50% to 70% less memory usage.</li>
                         <li> Evaluate new technologies and summarized the ones that works better for the games and apps to be developed.</li>
                     </ul>
                 </div>
