Setup Before D. Launch

--- a/about.html
+++ b/about.html
@@ -91,14 +91,12 @@
                     <img src="assets/img/Others/profile/sa_small.png" alt="">
                     <h1>Hi. I'm Santiago.</h1>
                     <p>
-                        I'm currently working as a game developer at <a href="http://www.rainbowtreeinc.com/">Rainbow Tree Inc</a>, also
-                        I'm finishing my studies on Systems Engineering at Universidad Nacional
-                        of Colombia; my previous work was as a game developer <!--as an Intern--> at Cocodrilo Dog Games;
-                        <!--until the end of July--> with a team consisting of one producer, two programmers and three
-                        artists.
+                        I'm currently working as a game developer at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> (Full Time - Remote).
+                        I have previously worked in the same role at <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite), also,                        
+                        I own a Bachelor degree on Systems Engineering from the <a href="http://unal.edu.co/" target="_blank">Universidad Nacional of Colombia.</a>
                     </p>
                     <p>
-                        I dedicated (and I'm still doing it) a lot of time to play games since I was a small kid,
+                        I dedicated (and I'm still doing) a lot of time to play games since I was a small kid,
                         due to that my family had some sort of Arcade full with different kind of consoles where people
                         could pay to play some hours, so one thing took to the other and I ended being the most active "client".
                     </p>
@@ -133,7 +131,7 @@
 
                     <p>
                         <b>Teaching</b><br>
-                        Some days of the week, you may find me teaching at the Universidad Nacional,
+                        I use to teach at the Universidad Nacional,
                         specifically in Game Design and Development in Unity.
                     </p>
 
