--- a/moana.html
+++ b/moana.html
@@ -90,10 +90,11 @@
        
         <div class="row mt">
             <div class="col-lg-6 col-lg-offset-3 centered">
-                <h3>Moana - The Walt Disney Company</h3>
+                <h3>Moana: Rhythm Run<br>
+                   Disney Interactive Company </h3>
                 <hr>
                 <p>
-
+                    "Tap your way through this rhythmic, action-adventure game featuring music from the new Disney film, Moana!"
                 </p>
             </div>      
             
@@ -117,19 +118,21 @@
 
                     <h4>  Publishing Platform(s) </h4>
                     <ul>
-                        <a target="_blank" href="https://play.google.com/store/movies/details/Moana?id=0C6924CE7027CC66MV&hl=en"><img src="assets/img/google-play.png" alt="" class="img-icon" /></a>
+                        <!--<a  target="_blank" href="https://play.google.com/store/movies/details/Moana?id=0C6924CE7027CC66MV&hl=en"><img src="assets/img/google-play.png" alt="" class="img-icon"/></a>-->
+                        <a href=""><img src="assets/img/google-play-pending.png" alt="" class="img-icon" /></a>
                         <a target="_blank" href="https://trailers.apple.com/trailers/disney/moana/"><img src="assets/img/app-store.png" alt="" class="img-icon" /></a>
-                        <a target="_blank" href="https://www.amazon.com/b?ie=UTF8&node=15500539011"><img src="assets/img/amazon.png" alt="" class="img-icon" /></a> 
+                        <!--                <a  target="_blank" href="https://www.amazon.com/b?ie=UTF8&node=15500539011"><img src="assets/img/amazon.png" alt="" class="img-icon"/></a>-->
+                        <a target="" href=""><img src="assets/img/amazon-pending.png" alt="" class="img-icon" /></a>
                     </ul>
 
                     <h4>  Cool Stuff - Challenges - Things I learned to do</h4>
 
                     <ul>
-                        <li>Programmed most of the Main Characters and Enemies behaviours based on MVC architecture.</li>
+                        <li>Programmed most of the Main Characters and Enemies behaviors based on a MVC architecture.</li>
                         <li>Worked on multiple UIs' functionalities: Main Menu, Scrollable Map and Loading Scenes.</li>
                         <li>Programmed a modular system to create random-loopable levels, giving the players a unique experience each time they play.</li>
                         <li>Integrated different kind of assets (Sprites, 3D Models, Textures, UI modules...), even, used Photoshop to cut, trim and export assets.</li>
-                        <li>Optimized each one of the images to reduce the app size, fulfilling our client's needs.</li>
+                        <li>Optimized each one of the images/textures to reduce app's size, fulfilling our client's needs.</li>
                         <li>Debug and Develop on top of a previous base code created by another programmer.</li>
                         <li>Worked on some UI and objects' animations inside Unity.</li>
                     </ul>
