--- a/webgames.html
+++ b/webgames.html
@@ -94,8 +94,9 @@
                 <hr>
                 <p>Here it is a list of the different HTML5 / Javascript games I have developed and their respective links (if available at the time),
                 most of them developed while I was at Rainbow Tree Inc as a Game Developer.
-                I will be updating it and their respective links as possible, you can also check on the
-                <a href="https://www.arbolabc.com/juegos-gratis" target="_blank"> Rainbow Tree main webpage (Beta)</a> some of them
+                I will be updating them and their respective links as possible, you can also check the
+                <a href="https://www.arbolabc.com/juegos-gratis" target="_blank"> Rainbow Tree main webpage</a>,
+                create a free account and get access to all of them.
                 </p>
                
               
@@ -199,7 +200,6 @@
                         <h3>BOOKS</h3>
                         <li>Juan y la Puerca Emperifollada (Fairy Tales)</li>
                         <li><a href="https://www.arbolabc.com/juegos-gratis/animal-bebes-b" target="_blank"> Animales Bebés (Non-Fiction)</a></li>
-                        <li></li>
                         <li>Las Plantas (Non-Fiction)</li>
                         <li>SistemaSolar (Non-Fiction)</li>
                         <li>SoyUnInsecto (Non-Fiction)</li>
