--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a href="webgames.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/HTML5-Games/mainGif400x300.gif" alt="" /></a>
                 <p>
                     <a href="webgames.html" target="_blank">+50 web games for the arbolabc.com games portal.</a>
-                    <a href="webgames.html"> <br> HTML5 and Javascript </a>
+                    <a href="webgames.html"> <br> HTML5 - Javascript </a>
                 </p>
             </div>
         </div>
@@ -113,8 +113,9 @@
             <div class="col-lg-6 col-lg-offset-3 centered">
                 <hr>
                 <p>
-                    I'm currently working as a game developer at <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite) and in the same role at
-                    <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> (Part Time - Remote). I have previously worked as a student research assistant at Universidad Nacional de Colombia.
+                    I'm currently working as a game developer at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> (Full Time - Remote).
+                    I have previously worked in the same role at <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite)
+                    and as a student research assistant at Universidad Nacional de Colombia.
                     <br>I'm always looking for new and exciting job opportunities, so don't hesitate on <a href="mailto:saalvarezva@gmail.com">writing me.</a>
                 </p>
             </div>
