--- a/private.html
+++ b/private.html
@@ -95,12 +95,15 @@
                 <p>
                     <a href="moana.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/Moana/Intro.PNG" alt="" /></a>
                     <!--<hr>-->
-                    <a href="moana.html"> <br> Moana - The Walt Disney Company </a>
+                    <a href="moana.html"> <br> Moana: Rhythm Run - Disney Interactive Company </a>
                     <a href="moana.html"> <br> C# - Unity </a>
                 </p>     
-                <a  target="_blank" href="https://play.google.com/store/movies/details/Moana?id=0C6924CE7027CC66MV&hl=en"><img src="assets/img/google-play.png" alt="" class="img-icon"/></a>
+                <!--<a  target="_blank" href="https://play.google.com/store/movies/details/Moana?id=0C6924CE7027CC66MV&hl=en"><img src="assets/img/google-play.png" alt="" class="img-icon"/></a>-->
+                <a href=""><img src="assets/img/google-play-pending.png" alt="" class="img-icon" /></a>
                 <a  target="_blank" href="https://trailers.apple.com/trailers/disney/moana/"><img src="assets/img/app-store.png" alt="" class="img-icon"/></a>
-                <a  target="_blank" href="https://www.amazon.com/b?ie=UTF8&node=15500539011"><img src="assets/img/amazon.png" alt="" class="img-icon"/></a> 
+<!--                <a  target="_blank" href="https://www.amazon.com/b?ie=UTF8&node=15500539011"><img src="assets/img/amazon.png" alt="" class="img-icon"/></a>--> 
+                <a target="" href=""><img src="assets/img/amazon-pending.png" alt="" class="img-icon" /></a>
+
             </div>
         </div>
         <hr>
@@ -110,7 +113,7 @@
                 <a href="webgames.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/HTML5-Games/mainGif400x300.gif" alt="" /></a>
                 <p>
                     <a href="webgames.html" target="_blank">+50 web games for the arbolabc.com games portal.</a>
-                    <a href="webgames.html"> <br> HTML5 and Javascript </a>
+                    <a href="webgames.html"> <br> HTML5 - Javascript </a>
                 </p>
             </div>
         </div>
@@ -119,8 +122,9 @@
             <div class="col-lg-6 col-lg-offset-3 centered">
                 <hr>
                 <p>
-                    I'm currently working as a game developer at <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a>, I have previously worked in the same role at
-                    <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> and as a student research assistant at Universidad Nacional de Colombia.
+                    I'm currently working as a game developer at <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a> (Full Time - Remote).
+                    I have previously worked in the same role at <a href="http://www.arbolabc.com/" target="_blank">Rainbow Tree Inc</a> (Full Time - Onsite)
+                    and as a student research assistant at Universidad Nacional de Colombia.
                     <br>I'm always looking for new and exciting job opportunities, so don't hesitate on <a href="mailto:saalvarezva@gmail.com">writing me.</a>
                 </p>
             </div>
