Moana iOS Link Update

--- a/moana.html
+++ b/moana.html
@@ -94,7 +94,12 @@
                    Disney Interactive Company </h3>
                 <hr>
                 <p>
-                    "Tap your way through this rhythmic, action-adventure game featuring music from the new Disney film, Moana!"
+                    "Find your rhythm…chase your destiny<br>
+                    Tap your way through this rhythmic, action-adventure game featuring music from the new Disney film, Moana! 
+                    Play as both Moana and Maui as you journey to restore the Heart of Te Fiti. Voyage to distant islands,
+                    take on Kakamora pirate ships, and battle in the Realm of Monsters. 
+                    Experience the unforgettable music directly from the Moana film as you sail, jump, run, 
+                    and fight your way to save the day and discover your destiny."
                 </p>
             </div>      
             
@@ -120,7 +125,7 @@
                     <ul>
                         <!--<a  target="_blank" href="https://play.google.com/store/movies/details/Moana?id=0C6924CE7027CC66MV&hl=en"><img src="assets/img/google-play.png" alt="" class="img-icon"/></a>-->
                         <a href=""><img src="assets/img/google-play-pending.png" alt="" class="img-icon" /></a>
-                        <a target="_blank" href="https://trailers.apple.com/trailers/disney/moana/"><img src="assets/img/app-store.png" alt="" class="img-icon" /></a>
+                        <a target="_blank" href="https://itunes.apple.com/app/id1141983956"><img src="assets/img/app-store.png" alt="" class="img-icon" /></a>
                         <!--                <a  target="_blank" href="https://www.amazon.com/b?ie=UTF8&node=15500539011"><img src="assets/img/amazon.png" alt="" class="img-icon"/></a>-->
                         <a target="" href=""><img src="assets/img/amazon-pending.png" alt="" class="img-icon" /></a>
                     </ul>
