--- a/private.html
+++ b/private.html
@@ -100,7 +100,7 @@
                 </p>     
                 <!--<a  target="_blank" href="https://play.google.com/store/movies/details/Moana?id=0C6924CE7027CC66MV&hl=en"><img src="assets/img/google-play.png" alt="" class="img-icon"/></a>-->
                 <a href=""><img src="assets/img/google-play-pending.png" alt="" class="img-icon" /></a>
-                <a  target="_blank" href="https://trailers.apple.com/trailers/disney/moana/"><img src="assets/img/app-store.png" alt="" class="img-icon"/></a>
+                <a  target="_blank" href="https://itunes.apple.com/app/id1141983956"><img src="assets/img/app-store.png" alt="" class="img-icon"/></a>
 <!--                <a  target="_blank" href="https://www.amazon.com/b?ie=UTF8&node=15500539011"><img src="assets/img/amazon.png" alt="" class="img-icon"/></a>--> 
                 <a target="" href=""><img src="assets/img/amazon-pending.png" alt="" class="img-icon" /></a>
 
