--- a/index.html
+++ b/index.html
@@ -92,19 +92,28 @@
 
         <div class="row mt">
             <div class="col-lg-8 col-lg-offset-2 centered">
+                <p>
+                    <a href="moana.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/Moana/Intro.PNG" alt="" /></a>
+                    <!--<hr>-->
+                    <a href="moana.html"> <br> Moana: Rhythm Run - Disney Interactive Company </a>
+                    <a href="moana.html"> <br> C# - Unity </a>
+                </p>
+                <!--<a  target="_blank" href="https://play.google.com/store/movies/details/Moana?id=0C6924CE7027CC66MV&hl=en"><img src="assets/img/google-play.png" alt="" class="img-icon"/></a>-->
+                <a href=""><img src="assets/img/google-play-pending.png" alt="" class="img-icon" /></a>
+                <a target="_blank" href="https://itunes.apple.com/app/id1141983956"><img src="assets/img/app-store.png" alt="" class="img-icon" /></a>
+                <!--                <a  target="_blank" href="https://www.amazon.com/b?ie=UTF8&node=15500539011"><img src="assets/img/amazon.png" alt="" class="img-icon"/></a>-->
+                <a target="" href=""><img src="assets/img/amazon-pending.png" alt="" class="img-icon" /></a>
+
+            </div>
+        </div>
+        <hr>
+
+        <div class="row mt">
+            <div class="col-lg-8 col-lg-offset-2 centered">
                 <a href="webgames.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/HTML5-Games/mainGif400x300.gif" alt="" /></a>
                 <p>
                     <a href="webgames.html" target="_blank">+50 web games for the arbolabc.com games portal.</a>
                     <a href="webgames.html"> <br> HTML5 - Javascript </a>
-                </p>
-            </div>
-        </div>
-
-
-        <div class="row mt">
-            <div class="col-lg-8 col-lg-offset-2 centered">
-                <p>
-                    Come back in November 21 for some special news :)
                 </p>
             </div>
         </div>
@@ -202,7 +211,7 @@
                 <div class="col-lg-4">
                     <h4>About this web page</h4>
                     <p>I'm using bootstrap and the theme STANLEY with some of my own touch</p>
-                    Last Update: 1-November-2016
+                    Last Update: 18-November-2016
                 </div><!-- /col-lg-4 -->
 
             </div>
