Moana App Store Top Image

--- a/moana.html
+++ b/moana.html
@@ -89,12 +89,13 @@
     <div class="container pt">
        
         <div class="row mt">
-            <div class="col-lg-6 col-lg-offset-3 centered">
+            <div class="col-lg-8 col-lg-offset-2 centered">
                 <h3>Moana: Rhythm Run<br>
                    Disney Interactive Company </h3>
                 <hr>
                 <p>
-                    "Find your rhythm…chase your destiny<br>
+                    <a href="assets/img/ProfessionalProjects/Moana/AppStoreKidsSection.png" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/Moana/AppStoreKidsSection.png" alt="" /></a>
+                    "Find your rhythm…chase your destiny.<br>
                     Tap your way through this rhythmic, action-adventure game featuring music from the new Disney film, Moana! 
                     Play as both Moana and Maui as you journey to restore the Heart of Te Fiti. Voyage to distant islands,
                     take on Kakamora pirate ships, and battle in the Realm of Monsters. 
