--- a/moana.html
+++ b/moana.html
@@ -91,7 +91,7 @@
         <div class="row mt">
             <div class="col-lg-8 col-lg-offset-2 centered">
                 <h3>Moana: Rhythm Run<br>
-                   Disney Interactive Company </h3>
+                    <a href="http://www.disney.com/" target="_blank">Disney Interactive</a> and <a href="http://www.cocodrilodog.com/" target="_blank">Cocodrilo Dog Games</a></h3>
                 <hr>
                 <p>
                     <a href="assets/img/ProfessionalProjects/Moana/AppStoreKidsSection.png" target="_blank"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/Moana/AppStoreKidsSection.png" alt="" /></a>
@@ -139,7 +139,7 @@
                         <li>Programmed a modular system to create random-loopable levels, giving the players a unique experience each time they play.</li>
                         <li>Integrated different kind of assets (Sprites, 3D Models, Textures, UI modules...), even, used Photoshop to cut, trim and export assets.</li>
                         <li>Optimized each one of the images/textures to reduce app's size, fulfilling our client's needs.</li>
-                        <li>Debug and Develop on top of a previous base code created by another programmer.</li>
+                        <li>Debug and Develop on top of a previous base code created by <a href="https://co.linkedin.com/in/juan-pablo-reyes-lega-95807960" target="_blank">another programmer.</a></li>
                         <li>Worked on some UI and objects' animations inside Unity.</li>
                     </ul>
                 </div>
