--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                 <p>
                     <a href="moana.html"><img class="img-responsive img-thumbnail" src="assets/img/ProfessionalProjects/Moana/Intro.PNG" alt="" /></a>
                     <!--<hr>-->
-                    <a href="moana.html"> <br> Moana: Rhythm Run - Disney Interactive Company </a>
-                    <a href="moana.html"> <br> C# - Unity </a>
+                    <a href="moana.html"> <br> Moana: Rhythm Run <br> Disney Interactive and Cocodrilo Dog Games <br> C# - Unity</a>
                 </p>
                 <!--<a  target="_blank" href="https://play.google.com/store/movies/details/Moana?id=0C6924CE7027CC66MV&hl=en"><img src="assets/img/google-play.png" alt="" class="img-icon"/></a>-->
                 <a href=""><img src="assets/img/google-play-pending.png" alt="" class="img-icon" /></a>
